feat: OpenAI integration + rate limit fix